[gd_scene load_steps=13 format=2]

[ext_resource path="res://Opening/opening2.png" type="Texture" id=1]
[ext_resource path="res://Opening/opening6.png" type="Texture" id=2]
[ext_resource path="res://Opening/opening1.png" type="Texture" id=3]
[ext_resource path="res://Opening/opening3.png" type="Texture" id=4]
[ext_resource path="res://Opening/opening4.png" type="Texture" id=5]
[ext_resource path="res://Opening/opening5.png" type="Texture" id=6]
[ext_resource path="res://Opening/Opening.gd" type="Script" id=7]
[ext_resource path="res://Sounds/SFX/Carro Frenando .ogg" type="AudioStream" id=8]
[ext_resource path="res://Sounds/SFX/Caida del perro carro .ogg" type="AudioStream" id=9]
[ext_resource path="res://Sounds/SFX/Perro llorando largo 2 .ogg" type="AudioStream" id=10]
[ext_resource path="res://Sounds/SFX/Perro llorando corto 1 .ogg" type="AudioStream" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 2 ) ],
"loop": false,
"name": "default",
"speed": 1.0
} ]

[node name="Opening" type="Node2D"]
script = ExtResource( 7 )

[node name="Anim" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
speed_scale = 0.4
centered = false

[node name="CarroFrenando" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = 10.0

[node name="CaidaPerrito" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = 10.0

[node name="Llorando1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = 10.0

[node name="Llorando2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
volume_db = 10.0

[connection signal="animation_finished" from="Anim" to="." method="_on_Anim_animation_finished"]
[connection signal="frame_changed" from="Anim" to="." method="_on_Anim_frame_changed"]
